# fraud_oracle

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
src/fraud_oracle/: __init__.py  __main__.py  settings.py  utils.py
src/fraud_oracle/pipelines/creating_model/: nodes.py  pipeline.py
src/fraud_oracle/pipelines/data_processing/: nodes.py  pipeline.py
src/fraud_oracle/pipelines/model_creating/: nodes.py  pipeline.py
tests/pipelines/data_science/: test_pipeline.py
